# NAS

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  LICENSE  README.md  fnn.onnx  main.py  notes.txt  pyproject.toml
.github/workflows/: AutoCloseIssues.yml
saved_models/: cnn_model_1846944662160.onnx
src/: importer.py  network.py  torch_network.py  train.py
src/classification_module/: test.py  train.py
src/data_module/: importer.py
src/model_module/: environment.py
src/utils/: CNNBuilder.py  cnn_utils.py  ffn_utils.py
test/: test_CNNBuilder.py  test_example.py  test_ffn_utils.py  test_importer.py  test_trainer.py
