[project]
name = "nas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "rich>=14.1.0",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.0",
]

[tool.ruff]
line-length = 100
